[workspace]
members = [
    "banyan-cli",
    "banyan-daemon",
    "banyan-guts",
]
resolver = "2"

[workspace.dependencies]
async-trait = { version = "^0.1" }
clap = { version = "^4", features = ["derive"] }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["std"] }
tokio = { version = "^1", default-features = false }
tracing = { version = "^0.1" }
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", default-features = false }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
