[package]
name = "banyan-cli"
license = "MIT"
description = "Banyan manages data and security for use with Filecoin"
homepage = "https://banyan.computer"
repository = "https://github.com/banyancomputer/tomb"
version = "1.1.1"
readme = "README.md"
edition = "2021"

# Cargo publication optionals
categories = [
  "compression",
  "cryptography",
  "encoding",
  "filesystem"
]
keywords = [
    "decentralization",
    "filecoin",
    "ipfs",
    "storage"
]

[dependencies]
banyan-guts = { path = "../banyan-guts" , features = ["cli"] }
clap = { workspace = true }
reqwest = "0.11.23"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "io-util", "fs"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "time", "json", "ansi"] }

[[bin]]
name = "banyan-cli"
path = "src/main.rs"