[package]
name = "banyan-daemon"
license = "MIT"
description = "Banyan manages data and security for use with Filecoin"
homepage = "https://banyan.computer"
repository = "https://github.com/banyancomputer/tomb"
version = "1.1.1"
readme = "README.md"
edition = "2021"

# Cargo publication optionals
categories = [
  "compression",
  "cryptography",
  "encoding",
  "filesystem"
]
keywords = [
    "decentralization",
    "filecoin",
    "ipfs",
    "storage"
]

[dependencies]
async-trait = { workspace = true }
axum = { version = "0.7.4", features = ["macros"] }
banyan-guts = { path = "../banyan-guts" , features = ["cli"] }
clap = { workspace = true }
daemonize = "0.5.0"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "io-util", "fs"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "time", "json", "ansi"] }

[[bin]]
name = "banyan-daemon"
path = "src/main.rs"