[package]
name = "banyan-daemon"
license = "MIT"
description = "Banyan manages data and security for use with Filecoin"
homepage = "https://banyan.computer"
repository = "https://github.com/banyancomputer/tomb"
version = "1.1.1"
readme = "README.md"
edition = "2021"

# Cargo publication optionals
categories = [
  "compression",
  "cryptography",
  "encoding",
  "filesystem"
]
keywords = [
    "decentralization",
    "filecoin",
    "ipfs",
    "storage"
]

[dependencies]
async-trait = { workspace = true }
axum = { version = "0.7.4", features = ["macros"] }
banyan-guts = { path = "../banyan-guts" , features = ["cli"] }
config = "0.13.1"
clap = { workspace = true }
daemonize = "0.5.0"
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.30.5"
tokio = { workspace = true, features = ["full", "io-util", "fs"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "time", "json", "ansi"] }

[[bin]]
name = "banyan-daemon"
path = "src/main.rs"