[package]
name = "carfile-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
wnfs = "0.1.14"
async-trait = "0.1"
tokio = "1.25.0"
fd-lock = "3.0.10"
