[package]
name = "dataprep-lib"
description = "Where shared types and functions should live for the Dataprep project"
# These are locked across the repository for now
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
jwalk.workspace = true

serde.workspace = true
serde_json.workspace = true
# Dev-Dependencies: These should live under a different tag
fake-file.workspace = true
dir-assert.workspace = true
fs_extra.workspace = true
criterion.workspace = true
lazy_static.workspace = true
zstd.workspace = true
fclones.workspace = true
indicatif = { version = "0.17.3", features = ["improved_unicode"] }
log = "0.4.17"
wnfs.workspace = true
chrono.workspace = true
rand.workspace = true
async-recursion = "1.0.4"
blake2 = "0.10.6"
skip_ratchet = "0.1.6"

# Benchmark for packing -> unpacking an input directory
[[bench]]
name = "pipeline"
harness = false
