[package]
name = "dataprep-pipelines"
description = "where the actual magic happens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
jwalk.workspace = true
blake2.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
rand.workspace = true
printio.workspace = true
age.workspace = true
unsigned-varint = "0.7.1"
cid = "0.10.1"
integer-encoding = {version = "3.0", features = ["tokio_async"]}
#iroh-car = "0.2.0"
ipld = { package = "libipld", version = "0.16" }
ipld-cbor = { package = "libipld-cbor", version = "0.16" }
# TODO Dev dependencies
strum.workspace = true
dir-assert.workspace = true
fs_extra.workspace = true
criterion.workspace = true
test-notifier.workspace = true
pprof.workspace = true

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "file_structure"
harness = false
