[package]
name = "dataprep"
description = "Command line interface for preparing data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dataprep-lib.workspace = true
clap.workspace = true
tokio.workspace = true
env_logger = "0.10.0"
log = "0.4.14"
