[package]
name = "tomb-cli"
description = "Command line interface for preparing data, managing synced data, and uploading it to banyan's decentralized cloud infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tomb.workspace = true
clap.workspace = true
tokio.workspace = true
env_logger = "0.10.0"
log = "0.4.14"
anyhow = "1"
tomb-common = { version = "1.1.0", path = "../tomb-common" }

[dev-dependencies]
serial_test = "2.0.0"
anyhow = { version = "1", features = ["backtrace"] }
fs_extra.workspace = true
predicates = "3.0.3"
assert_cmd = "2.0.11"
