[package]
name = "tomb-common"

# These are locked across the repository for now
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { version = "^1", features = ["backtrace"] }
chrono = { version = "^0.4", default-features = false, features = ["clock", "std"] }
lz4_flex = "^0.11"
rand = "^0.8"
reqwest = { version = "^0.11", features = ["blocking", "multipart", "json", "stream"] }
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
tomb-crypt = { git = "https://github.com/banyancomputer/tomb-crypt", branch = "main" }
async-trait = "^0.1"
base58 = "^0.2"
blake3 = "^1"
bytes = "^1"
futures = "^0.3"
futures-core = "^0.3"
futures-util = "^0.3"
gloo = { version = "^0.10", features = ["console"] }
hex = "^0.4"
sha1 = "^0.10"
sha2 = "^0.10"
test-case = "^3"
thiserror = "^1"
unsigned-varint = "^0.7"
uuid = { version = "^1.4", features = ["serde"] }
#wasm-bindgen = "^0.2"
wnfs = "^0.1"

[dev-dependencies]
#fs_extra = { workspace = true }
#tokio = { workspace = true }
#lazy_static.workspace = true

async-std = { version = "^1", features = ["attributes"] }
base64 = "^0.21"
gloo = { version = "^0.10", features = ["console"] }
hex-literal = "^0.4"
serial_test = "^2"

[lib]
#crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
# Access to banyan api
banyan-api = []
