[package]
name = "tomb-common"
edition = "2021"
rust-version = "1.69"

license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
lz4_flex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true } 
serde_json = { workspace = true }
serde = { workspace = true }
tomb-crypt = { workspace = true } 
wnfs = { workspace = true }
blake3 = { workspace = true }

async-trait = "^0.1"
base58 = "^0.2"
futures = "^0.3"
futures-core = "^0.3"
futures-util = "^0.3"
gloo = { version = "^0.10", features = ["console"] }
hex = "^0.4"
sha1 = "^0.10"
sha2 = "^0.10"
test-case = "^3"
thiserror = "^1"
uuid = { version = "^1", features = ["serde", "v4"] }
wasm-bindgen = "^0.2"
unsigned-varint = "^0.7"
bytes = "1.5.0"
async-recursion = "1.0.5"
mime_guess = "^2"
colored = "^2"

[dev-dependencies]
fs_extra = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
cid = "^0.10"
async-std = { version = "^1", features = ["attributes"] }
serial_test = "^2"
hex-literal = "^0.4"
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[features]
fake = []
