[package]
name = "tomb-crypt"
license = "LicenseRef-LICENSE.txt"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { optional = true, version = "^0.21" }
openssl = { optional = true, version = "^0.10", features = ["v110"] }
openssl-hkdf = { optional = true, version = "^0.2" }

[features]
default = ["standard"]
standard = ["dep:base64", "dep:openssl", "dep:openssl-hkdf"]
