[package]
name = "tomb-wasm"
edition = { workspace = true}
version = { workspace = true}
repository = { workspace = true}
license = { workspace = true}

[features]
default = ["console_error_panic_hook"]

# todo: this only does something at the workspace level, we should probably
# move all wasm stuff into its own repo because we always need to specify
# alternate flags and profile settings which we simply can't do from a
# sub-crate.
#[profile.release]
#opt-level = "s" # Optimize for binary size

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
wnfs = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
# Crate dependencies
async-trait = "^0.1"
console_error_panic_hook = { version = "^0.1", optional = true }
serde-wasm-bindgen = "^0.5"
tomb-common = { path = "../tomb-common", version = "^1", features = ["banyan-api"] }
wasm-bindgen-futures = "^0.4"
web-sys = { version = "^0.3", features = [
    "console",
    "Window",
    "Crypto",
    "CryptoKey",
    "CryptoKeyPair",
    "SubtleCrypto",
    "FileReader"
]}
getrandom = { version = "^0.2", features = ["js"] }
wasm-bindgen = { version = "^0.2" }
js-sys = "^0.3"
futures-util = "^0.3"
noosphere-car = "^0.2"
futures = "^0.3"
tokio-util = { version = "^0.7", features = ["compat"] }
gloo = { version = "^0.8", features = ["net"] }
rc = "^0.1"
base64 = "^0.21"
thiserror = "^1"
pem = "^2"
tomb-crypt = { workspace = true }
uuid = "^1"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[lib]
crate-type = ["cdylib"]
