[package]
name = "tomb-wasm"
edition = "2021"
rust-version = "1.69"

license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# todo: this only does something at the workspace level, we should probably
# move all wasm stuff into its own repo because we always need to specify
# alternate flags and profile settings which we simply can't do from a
# sub-crate.
#[profile.release]
#opt-level = "s" # Optimize for binary size

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tomb-crypt = { workspace = true }
wnfs = { workspace = true }
blake3 = { workspace = true }
uuid = { version = "^1", features = ["serde", "v4"] }

# Crate dependencies
async-trait = "^0.1"
console_error_panic_hook = { version = "^0.1", optional = true }
futures = "^0.3"
futures-util = "^0.3"
getrandom = { version = "^0.2", features = ["js"] }
gloo = { version = "^0.8", features = ["net"] }
js-sys = "^0.3"
noosphere-car = "^0.2"
pem = "^2"
rc = "^0.1"
serde-wasm-bindgen = "^0.6"
tokio-util = { version = "^0.7", features = ["compat"] }
tomb-common = { path = "../tomb-common", version = "^1" }
wasm-bindgen = { version = "^0.2" }
wasm-bindgen-futures = "^0.4"

[dev-dependencies]
wasm-bindgen-test = "^0.3"

[features]
default = ["console_error_panic_hook"]

[lib]
name = "tomb_wasm"
crate-type = ["cdylib", "rlib"]
