[package]
name = "tomb"
description = "Where shared types and functions should live for the tomb project"

# These are locked across the repository for now
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
tomb-common = { path = "../tomb-common", version = "1.1.0" }
serde_json = { workspace = true }
wnfs.workspace = true
anyhow.workspace = true
jwalk.workspace = true
serde.workspace = true
zstd.workspace = true
fclones.workspace = true
indicatif = { version = "0.17.3", features = ["improved_unicode"] }
log = "0.4.17"
chrono.workspace = true
rand.workspace = true
async-recursion = "1.0.4"
tokio.workspace = true
clap.workspace = true
thiserror = "1.0.46"
env_logger = "0.10.0"
async-trait = "0.1.71"
hex = "0.4.3"
tomb-crypt = { workspace = true }

[dev-dependencies]
fs_extra.workspace = true
dir-assert.workspace = true
criterion.workspace = true
lazy_static.workspace = true
serial_test = "2.0.0"
fake-file.workspace = true

# Benchmark for packing -> unpacking an input directory
[[bench]]
name = "pipeline"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
