[package]
name = "tomb"
description = "Where shared types and functions should live for the tomb project"
edition = "2021"
rust-version = "1.69"

license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
jwalk = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tomb-crypt = { workspace = true }
wnfs = { workspace = true }
reqwest.workspace = true
uuid = { version = "^1", features = ["serde", "v4"] }
futures-util = "0.3.28"
fclones = "^0.30"
indicatif = { version = "^0.17", features = ["improved_unicode"] }
log = "^0.4"
async-recursion = "^1"
thiserror = "^1"
env_logger = "^0.10"
async-trait = "^0.1"
hex = "^0.4"
tomb-common = { path = "../tomb-common", version = "^1" }
open = "^5"
base64 = "^0.21"
colored = "2.0.4"

[dependencies.nix]
version = "^0.27"
features = ["user", "fs"]

[dev-dependencies]
fs_extra = { workspace = true }
dir-assert = { workspace = true }
criterion = { workspace = true }
lazy_static = { workspace = true }
fake-file = { workspace = true }

serial_test = "^2"

# Benchmark for packing -> unpacking an input directory
[[bench]]
name = "pipeline"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
fake = []
